// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeIcon: Component should render correctly 1`] = `
<home.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;

exports[`HomeIcon: Component should render with custom styles 1`] = `
<home.svg
  style={
    Object {
      "fill": "blue",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;
